# KohakuHub

./: .gitattributes  .gitignore  API.md  CLI.md  CONTRIBUTING.md  Dockerfile  LICENSE  LICENSING.md  README.md  TODO.md  config-example.toml  deploy.sh  docker-compose copy.yml  docker-compose.board-integrated.yml  docker-compose.example.yml  docker-compose.kohakuboard.yml  docker-compose.yml  pyproject.toml  pytest.ini  startup.py  test.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
docker/: startup.py
docker/kohakuboard/: Dockerfile  nginx.conf
docker/nginx/: default.conf
docs/: API.md  Admin.md  CLI.md  Git.md  KOHAKUBOARD_DEPLOYMENT.md  KOHAKUBOARD_QUICKSTART.md  deployment.md  getting-started.md  git-server.md  ports.md  setup.md
docs/api/: admin.md  authentication.md  branches.md  commits.md  external-tokens.md  file-upload.md  git-lfs.md  git-protocol.md  huggingface-compatible.md  invitations.md  organizations.md  quota.md  repositories.md  settings.md  stats.md  tree.md
docs/deployment/: docker.md  production.md
docs/kohakuboard/: README.md  api.md  architecture.md  cli.md  getting-started.md  index.md
docs/non-commercial/: dataset-viewer.md  kohakuboard.md  licensing.md
docs/reference/: config.md  ports.md
examples/: README.md  kohakuboard_advanced.py  kohakuboard_all_media_types.py  kohakuboard_basic.py  kohakuboard_cifar_training.py  kohakuboard_explicit_steps.py  kohakuboard_media_in_tables.py  kohakuboard_mnist_training.py  kohakuboard_signal_handling.py  view_board_duckdb.ipynb
functions/: README.md  _middleware.js  _proxy.js  _utils.js
functions/api/: [[path]].js
functions/org/: [[path]].js
images/: generate-png-favicons.html  generate_png_favicons.py
scripts/: README.md  README_KOHAKUBOARD.md  build_kohakuboard.py  clear_s3_storage.py  deploy.cjs  deploy.py  deploy.sh  deploy_board.py  deploy_board_integrated.py  fetch_lint_issues.py  format.py  format_kobo.py  generate_docker_compose.py  generate_mock_board.py  generate_mock_board_direct.py  generate_secret.py  generate_test_dataset.py  generate_test_files.py  generate_test_repo.py  init-databases.sh  lakefs-entrypoint.sh  migrate_add_commit_tracking.py  migrate_add_quotas_final.py  migrate_add_storage_quota.py  migrate_config.py  migrate_repository_schema.py  migrate_separate_quotas.py  run_migrations.py  show_s3_usage.py  sync_lakefs_credentials.py  test.py  test_auth.py  test_migration_009.py  test_server_board.py
scripts/db_migrations/: 001_repository_schema.py  002_user_org_quotas.py  003_commit_tracking.py  004_repo_quotas.py  005_profiles_and_invitations.py  006_invitation_multi_use.py  007_avatar_support.py  008_foreignkey_refactoring.py  009_repo_lfs_settings.py  010_likes_and_downloads.py  011_file_soft_delete.py  012_invitation_created_by_nullable.py  013_bigint_size_fields.py  014_user_external_tokens.py  015_confirmation_tokens.py  README.md  __init__.py  _migration_utils.py
src/kohaku-board-ui/: README.md  index.html  package-lock.json  package.json  uno.config.js  vite.config.js
src/kohaku-hub-admin/: README.md  index.html  package-lock.json  package.json  uno.config.js  vite.config.js
src/kohaku-hub-ui/: .gitignore  README.md  index.html  package-lock.json  package.json  uno.config.js  vite.config.js
src/kohakuboard/: LICENSE  README.md  __init__.py  auth.py  cli.py  config.py  (+4 more)
tests/: README.md  __init__.py  base.py  config.py  conftest.py  requirements.txt  test_auth.py  test_branches.py  test_file_ops.py  test_lfs.py  test_org.py  test_repo_crud.py  test_repo_info.py
(+381 files in other folders)
